# IES

./: README.md
Lab01/: README.md
Lab01/Lab01_3/my-weather-radar/: pom.xml
Lab01/Lab01_4/composetest/: docker-compose.yml
Lab01/Lab01_5/ipma-api-client/: pom.xml
Lab01/my-weather-radar/: pom.xml
Lab02/: README.md
Lab02/Lab02_1/embedded-jetty-server/: pom.xml
Lab02/Lab02_3/spring-boot-web/: pom.xml
Lab02/Lab02_4/restful-quotes/: pom.xml
Lab03/: README.md
Lab03/Lab03_2/restapi-mysql/: docker-compose.yml
Lab03/Lab03_3/quotes/: Dockerfile  pom.xml
Lab04/Lab04_2/my-props-app/: package-lock.json  package.json
Lab04/Lab04_2/tic-tac-toe/: package-lock.json  package.json
Lab04/Lab04_3/my-consume-api-app/: package-lock.json
Lab04/Lab04_4/: .env  docker-compose.yml
Lab04/Lab04_4/frontend-quotes/: package.json
Lab04/Lab04_4/quotes/: .env
Lab05/: README.md
Lab05/Lab05_2/lab05_2/: consumer_example.py  producer_example.py
Lab05/Lab05_3/app/: pom.xml
Lab05/Lab05_4/: .env  docker-compose.yml
Lab05/Lab05_4/frontend-quotes/: package-lock.json  package.json
Lab05/Lab05_4/quotes/: Dockerfile  pom.xml
Lab05/Lab05_4/quotes-generation/: README.md  producer.py
Praticas/: README.md
Praticas/Lab02/: README.md
Praticas/Lab04/: README.md
Praticas/Lab04/Lab04_4/: package-lock.json
Praticas/Lab05/: README.md
Praticas/Lab05/Lab05_1/: docker-compose.yml
Praticas/Lab05/Lab05_2/: pyproject.toml
Praticas/Lab05/Lab05_4/: .env  package-lock.json
Praticas/Lab05/Lab05_4/quotes-generation/: producer.py  pyproject.toml
(+109 files in other folders)
