[tool.poetry]
name = "quotes-generation"
version = "0.1.0"
description = ""
authors = ["Pedro Pinto <pmap@ua.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kafka-python = "^2.0.2"
python-lorem = "^1.3.0.post3"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
